--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 
 .gridBox {
   background-color: aliceblue;
-  border: 0px solid black;
+  border: 0px solid rgb(0, 0, 0);
   height: 1fr;
   width: 1fr;
 }
