--- a/style.css
+++ b/style.css
@@ -1,4 +1,82 @@
+* {
+  font-family: 'VT323', sans-serif;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  flex-direction: column;
+  background-color: #14477e;
+}
+
+.title {
+  font-size: 62px;
+  font-weight: 600;
+  color:#fa4c89 ;
+
+}
+
+.container {
+  display: flex;
+  border-radius: 20px;
+  background-color: #1d8ad2;
+  padding: 10px 40px;
+  max-width: 100vh;
+}
+
+.main {
+
+  flex: 1 0 80vh;
+
+  min-height: 80vh;
+  max-width: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.buttons {
+  flex: 0 1 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+button{
+  font-size: 24px;
+  background-color: #fa4c89;
+  color:#ffffff;
+}
+
+.colorPicker{
+  border: none;
+  min-width: 130px;
+  min-height: 130px;
+  background-color: #14477e;
+}
+
+.gridSizeShow{
+  margin: 0;
+  padding: 0;
+  font-size: 32px;
+  text-align: center;
+}
+
+.buttonClicked {
+  background-color: #2a72be;
+}
+
+.sketchPad {
+  flex: 0 1 0;
+}
+
 .gridContainer {
+  background-color: white;
   display: grid;
   width: 500px;
   height: 500px;
@@ -24,4 +102,8 @@
 
 .paintedGrid {
   background-color: rgb(21, 20, 21);
+}
+
+.shaded {
+  opacity: 0.1;
 }
